Incremental check-in prior to renaming branch.