@@ -1,5 +1,9 @@
 Gamma is an application for drawing Minkowski spacetime diagrams.
 
+* INSTALLERS ARE AVAILABLE FOR WINDOWS AND DEBIAN-BASED LINUX DISTRIBUTIONS
+* MACOS INSTALLERS ARE PLANNED
+* THERE IS A UNIVERSAL ZIP FILE (SEE BELOW)
+
 Known Problems:
 
   * Touch gestures for zoom/pan don't work well. Use Ctrl+0 to restore the
@@ -10,7 +14,36 @@ Known Problems:
 ********************************************************************
 ********************************************************************
 
-WINDOWS 10 INSTRUCTIONS
+WINDOWS 7-10
+
+* Download and run (double-click on) the Windows x64 installer (MSI)
+  gamma-<version>.msi. For x32 systems, you will need to use the universal ZIP
+  file. Once installed, you can run it from a desktop icon or from the Start
+  menu.
+
+DEBIAN-BASED LINUX DISTRIBUTIONS
+
+* Download and run sudo dpkg -i gamma-<version>.deb. Once installed, you can
+  run it from a desktop icon.
+
+OTHER SYSTEMS
+
+* Use the universal TAR.GZ file.
+
+********************************************************************
+********************************************************************
+********************************************************************
+
+INSTALLING THE UNIVERSAL TAR.GZ FILE
+
+To install the universal tar.gz file, you will need to know how to:
+
+* Enter DOS (Windows) or shell (Mac/Linux) commands.
+* Define a persistent environment variable.
+* Unpack a tar.gz file.
+* Add a path to the PATH environment variable.
+
+--------------------------------------------------------------------
 
 INSTALL JAVA
 
@@ -18,18 +51,47 @@ Download and install Java JDK 17.0.2 (or later) from
 
 https://www.oracle.com/java/technologies/downloads/
 
-To verify that it is installed properly:
+This is also called "Java SE Development Kit 17.0.2". The page includes a link
+to installation instructions in the section on "Release Information".
 
-The Java JDK installation should have placed Java in your PATH. Bring
-up a terminal window (cmd.exe) and type:
+There are also open source versions at
+
+https://jdk.java.net/17/
+
+These versions don't include installers or even installation instructions.
+
+To verify that Java is installed properly, type:
 
   java --version
 
-This should output something like:
+into a cmd.exe or terminal window. This should output something starting with:
 
-  openjdk 17.0.2 2022-01-18
-  OpenJDK Runtime Environment (build 17.0.2+8-86)
-  OpenJDK 64-Bit Server VM (build 17.0.2+8-86, mixed mode, sharing)
+  java version "17.0.2"
+
+Make sure that the JAVA_HOME variable is set. Using a terminal window, enter:
+
+  echo %JAVA_HOME% (Windows)
+  echo $JAVA_HOME (Mac/Linux)
+
+If this does not display path, set JAVA_HOME to the path where Java
+was installed. On Windows, locate the top of the Java installation (usually
+something like C:\Program Files\Java\<version>). Then, in a terminal window,
+type:
+
+  setx JAVA_HOME ""
+
+On Mac/Linux, use the "which" command in a terminal window to find the java
+executable:
+
+  which java
+
+Remove "/bin" from the path. This should be your JAVA_HOME value. You will need
+to set it in whatever profile file you are using: ~/.bash_profile, ~/.profile,
+or others. In this file, enter:
+
+  JAVA_HOME="<path>"
+
+You may have to log out/in to make this effective.
 
 --------------------------------------------------------------------
 
@@ -44,218 +106,25 @@ https://gluonhq.com/products/javafx/
 The download should be a ZIP file. You can place the javafx-sdk-17.0.2
 folder anywhere.
 
-Open a terminal window (cmd.exe) and enter:
-
-  setx JAVAFX_HOME="<JavaFX install location>\lib"
-
-This only needs to be done once; the quotes are important if the path
-has spaces. Note that only processes started in the future will know about this
-new environment variable.
+You will need to create a JAVAFX_HOME environment variable. The JAVAFX_HOME path
+should point to the top of the unpacked ZIP file.
 
 --------------------------------------------------------------------
 
 INSTALL GAMMA
 
-Unzip the Gamma installation package to any location.
-
-Open a terminal window (cmd.exe) and enter:
-
-  setx GAMMA_HOME="<Gamma install location>\lib"
-
-This only needs to be done once; the quotes are important if the path
-has spaces. Note that only processes started in the future will know about this
-new environment variable.
+Unzip the Gamma installation package to any location. If you unpacked the file
+into <some path>, then add <some path>\app (Windows) or <some path>/app (Mac/
+Linux) to your PATH.
 
 --------------------------------------------------------------------
 
-RUN GAMMA FROM A TERMINAL
+RUN GAMMA
 
-Copy/paste this long command into a terminal window (cmd.exe):
+To run Gamma from a terminal window, enter:
 
-  java -p %JAVAFX_HOME%;%GAMMA_HOME% --add-modules org.freixas.gamma,javafx.controls,javafx.fxml -jar %GAMMA_HOME%\gamma.jar
+  gamma.bat (Windows)
+  gamma (Mac/Linux)
 
---------------------------------------------------------------------
-
-RUN GAMMA FROM A SHORTCUT
-
-You can create a desktop icon to to simplify running Gamma.
-
-  * Right-click on the desktop and select New > Shortcut
-  * Browse to the location of javaw (Usually,
-    C:\Program Files\Java\bin\javaw.exe -- note the "w" at the end. Don't
-    select java.exe)
-  * Press Next and name the shortcut Gamma
-  * Click Finish
-  * Right-click on the created icon and select Properties
-  * Append the arguments listed above (everything starting with "-p")
-    to the Target field.
-  * Click Change Icon
-  * Browse to the location where Gamma is installed and then the icons folder
-  * Select the gamma icon
-  * Click OK until you're out
-
-You can copy this shortcut to your start menu, if you don't want it on the
-desktop. You can now double-click on the shortcut to start Gamma.
-
-
-********************************************************************
-********************************************************************
-********************************************************************
-
-MAC INSTRUCTIONS
-
-I only have access to Windows 10 systems. Gamma should work on any
-standard platform, but I am unable to test anything except Windows 10. Please
-report any installation problems.
-
-INSTALL JAVA
-
-Download and install Java JDK 17.0.2 (or later) from
-
-https://www.oracle.com/java/technologies/downloads/
-
-To verify that it is installed properly:
-
-The Java JDK installation should have placed Java in your PATH. Bring
-up a terminal window and type:
-
-  java --version
-
-This should output something like:
-
-  openjdk 17.0.2 2022-01-18
-  OpenJDK Runtime Environment (build 17.0.2+8-86)
-  OpenJDK 64-Bit Server VM (build 17.0.2+8-86, mixed mode, sharing)
-
---------------------------------------------------------------------
-
-INSTALL JAVAFX
-
-Download and install JavaFX 17.0.2 [LTS] (or later) from
-
-https://gluonhq.com/products/javafx/
-
-(for Type, select SDK)
-
-The download should be a ZIP file. You can place the javafx-sdk-17.0.2
-folder anywhere.
-
-On a Mac, I can't say for sure how to set an environment variable
-globally. It depends on the shell you run. The most common advice is to
-edit ~/.bash_profile (for those running bash) or ~/.profile (for those running
-sh and maybe other shells) and add this command:
-
-  export JAVAFX_HOME="<JavaFX install location>\lib"
-
-The quotes may be required if the path has spaces.
-
---------------------------------------------------------------------
-
-INSTALL GAMMA
-
-Unzip the Gamma installation package to any location.
-
-Edit ~/.bash_profile or ~/.profile and add this command:
-
-  export GAMMA_HOME="<Gamma install location>\lib"
-
-The quotes may be required if the path has spaces.
-
---------------------------------------------------------------------
-
-RUN GAMMA FROM A TERMINAL
-
-Copy/paste this long command into a terminal window:
-
-  java -p "$JAVAFX_HOME;$GAMMA_HOME" --add-modules org.freixas.gamma,javafx.controls,javafx.fxml -jar "$GAMMA_HOME\gamma.jar"
-
---------------------------------------------------------------------
-
-RUN GAMMA FROM A SHORTCUT
-
-Sorry, the process for creating Mac icons that execute commands is not
-straight-forward and I have no way of testing any instructions.
-
-
-********************************************************************
-********************************************************************
-********************************************************************
-
-LINUX INSTRUCTIONS
-
-I only have access to Windows 10 systems. Gamma should work on any
-standard platform, but I am unable to test anything except Windows 10. Please
-report any installation problems.
-
-INSTALL JAVA
-
-Download and install Java JDK 17.0.2 (or later) from
-
-https://www.oracle.com/java/technologies/downloads/
-
-To verify that it is installed properly:
-
-The Java JDK installation should have placed Java in your PATH. Bring
-up a terminal window and type:
-
-  java --version
-
-This should output something like:
-
-  openjdk 17.0.2 2022-01-18
-  OpenJDK Runtime Environment (build 17.0.2+8-86)
-  OpenJDK 64-Bit Server VM (build 17.0.2+8-86, mixed mode, sharing)
-
---------------------------------------------------------------------
-
-INSTALL JAVAFX
-
-Download and install JavaFX 17.0.2 [LTS] (or later) from
-
-https://gluonhq.com/products/javafx/
-
-(for Type, select SDK)
-
-The download should be a ZIP file. You can place the javafx-sdk-17.0.2
-folder anywhere.
-
-On Linux, I can't say for sure how to set an environment variable
-globally. It depends on the shell you run. The most common advice is to
-edit ~/.bash_profile (for those running bash) or ~/.profile (for those running
-sh and maybe other shells) and add this command:
-
-  export JAVAFX_HOME="<JavaFX install location>/lib"
-
-The quotes may be required if the path has spaces.
-
---------------------------------------------------------------------
-
-INSTALL GAMMA
-
-Unzip the Gamma installation package to any location.
-
-Edit ~/.bash_profile or ~/.profile and add this command:
-
-  export GAMMA_HOME="<Gamma install location>/lib"
-
-The quotes may be required if the path has spaces.
-
---------------------------------------------------------------------
-
-RUN GAMMA FROM A TERMINAL
-
-Copy/paste this long command into a terminal window:
-
-  java -p "$JAVAFX_HOME;$GAMMA_HOME" --add-modules org.freixas.gamma,javafx.controls,javafx.fxml -jar "$GAMMA_HOME\gamma.jar"
-
---------------------------------------------------------------------
-
-RUN GAMMA FROM A SHORTCUT
-
-You can create a desktop shortcut to run the command. The method varies
-depending on the version of Linux you are running.
-
-See: https://www.xmodulo.com/create-desktop-shortcut-launcher-linux.html
-
-An icon can be obtained by using an icon from the Gamma icons
-folder.
+You may be able to link the command to a desktop icon to make it more
+convenient to run. You may still see a brief appearance of a terminal window.
